--- a/index.html
+++ b/index.html
@@ -1,7 +1,48 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <link rel="stylesheet" href="style/homepage.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+  <div class="projects">
+    <div class="card" onclick="window.open('https://github.com/grauso-t/ecommerce.git');">
+      <div class="card-details">
+        <p class="text-title">Hardware Zone</p>
+        <p class="text-body">Project of ecommerce</p>
+      </div>
+      <button class="card-button">More info</button>
+    </div>
+
+    <div class="card" onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');">
+      <div class="card-details">
+        <p class="text-title">Bookster</p>
+        <p class="text-body">Project of web app</p>
+      </div>
+      <button class="card-button">More info</button>
+    </div>
+  </div>
+
+  <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
+    <div class="wheel"></div>
+    <div class="hamster">
+      <div class="hamster__body">
+        <div class="hamster__head">
+          <div class="hamster__ear"></div>
+          <div class="hamster__eye"></div>
+          <div class="hamster__nose"></div>
+        </div>
+        <div class="hamster__limb hamster__limb--fr"></div>
+        <div class="hamster__limb hamster__limb--fl"></div>
+        <div class="hamster__limb hamster__limb--br"></div>
+        <div class="hamster__limb hamster__limb--bl"></div>
+        <div class="hamster__tail"></div>
+      </div>
+    </div>
+    <div class="spoke"></div>
+  </div>
 </body>
+
 </html>
