--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card" onclick="window.open('https://github.com/grauso-t/ecommerce.git');">
       <div class="card-details">
         <p class="text-title">Hardware Zone</p>
-        <p class="text-body">Project of ecommerce</p>
+        <p class="text-body">Project ecommerce</p>
       </div>
       <button class="card-button">More info</button>
     </div>
@@ -19,7 +19,7 @@
     <div class="card" onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');">
       <div class="card-details">
         <p class="text-title">Bookster</p>
-        <p class="text-body">Project of web app</p>
+        <p class="text-body">Project Web-App</p>
       </div>
       <button class="card-button">More info</button>
     </div>
