--- a/index.html
+++ b/index.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" href="style/homepage.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>grauso-t</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Features-Centered-Icons-icons.css">
 </head>
 
-<body>
-
-  <div class="projects">
-    <div class="card" onclick="window.open('https://github.com/grauso-t/ecommerce.git');">
-      <div class="card-details">
-        <p class="text-title">Hardware Zone</p>
-        <p class="text-body">Project ecommerce</p>
-      </div>
-      <button class="card-button">More info</button>
-    </div>
-
-    <div class="card" onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');">
-      <div class="card-details">
-        <p class="text-title">Bookster</p>
-        <p class="text-body">Project Web-App</p>
-      </div>
-      <button class="card-button">More info</button>
-    </div>
-  </div>
-
-  <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
-    <div class="wheel"></div>
-    <div class="hamster">
-      <div class="hamster__body">
-        <div class="hamster__head">
-          <div class="hamster__ear"></div>
-          <div class="hamster__eye"></div>
-          <div class="hamster__nose"></div>
+<body style="background: var(--bs-gray-dark);">
+    <nav class="navbar navbar-light navbar-expand-md">
+        <div class="container-fluid"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: var(--bs-white);"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#" style="font-weight: bold;color: var(--bs-white);margin-right: 5px;">HomePage</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" style="color: var(--bs-white);margin-left: 5px;margin-right: 5px;">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" style="color: var(--bs-white);margin-right: 5px;margin-left: 5px;">Contacts</a></li>
+                </ul>
+            </div>
+            <header></header>
         </div>
-        <div class="hamster__limb hamster__limb--fr"></div>
-        <div class="hamster__limb hamster__limb--fl"></div>
-        <div class="hamster__limb hamster__limb--br"></div>
-        <div class="hamster__limb hamster__limb--bl"></div>
-        <div class="hamster__tail"></div>
-      </div>
+    </nav>
+    <h1 style="text-align: center;color: var(--bs-white);"></h1>
+    <div class="container py-4 py-xl-5" style="min-width: 300px;">
+        <div class="row mb-5" style="border-bottom: 1px solid var(--bs-blue) ;">
+            <div class="col-md-8 col-xl-6 text-center mx-auto" style="padding-bottom: 5px;">
+                <h2 style="font-weight: bold;"><span style="color: var(--bs-white);">Projects</span><br></h2>
+            </div>
+        </div>
+        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+            <div class="col">
+                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
+                    <div class="bs-icon-lg bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-pc-display">
+                            <path fill-rule="evenodd" d="M8 1a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1V1Zm1 13.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM9.5 1a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5ZM9 3.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5ZM1.5 2A1.5 1.5 0 0 0 0 3.5v7A1.5 1.5 0 0 0 1.5 12H6v2h-.5a.5.5 0 0 0 0 1H7v-4H1.5a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5H7V2H1.5Z"></path>
+                        </svg></div>
+                    <div class="px-3">
+                        <h4 style="color: var(--bs-white);">HardwareZone</h4>
+                        <p style="color: var(--bs-white);min-height: 48px;">Project for Software Technologies for the Web course.</p><a onclick="window.open('https://github.com/grauso-t/ecommerce.git');">More info&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
+                            </svg></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
+                    <div class="bs-icon-lg bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-book">
+                            <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"></path>
+                        </svg></div>
+                    <div class="px-3">
+                        <h4 style="color: var(--bs-white);">Bookster</h4>
+                        <p style="color: var(--bs-white);min-height: 48px;">Project for the Software Engineering course</p><a onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');">More Info&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
+                            </svg></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="spoke"></div>
-  </div>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
