--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </svg></div>
                     <div class="px-3">
                         <h4 style="color: var(--bs-white);">HardwareZone</h4>
-                        <p style="color: var(--bs-white);min-height: 48px;">Project for Software Technologies for the Web course.</p><a onclick="window.open('https://github.com/grauso-t/ecommerce.git');">More info&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <p style="color: var(--bs-white);min-height: 48px;">Project for Software Technologies for the Web course.</p><a onclick="window.open('https://github.com/grauso-t/ecommerce.git');" style="color: var(--bs-blue);">More info&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
                     </div>
@@ -50,7 +50,7 @@
                         </svg></div>
                     <div class="px-3">
                         <h4 style="color: var(--bs-white);">Bookster</h4>
-                        <p style="color: var(--bs-white);min-height: 48px;">Project for the Software Engineering course</p><a onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');">More Info&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <p style="color: var(--bs-white);min-height: 48px;">Project for the Software Engineering course</p><a onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');" style="color: var(--bs-blue);">More Info&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
                     </div>
