--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                             <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"></path>
                         </svg></div>
                     <div>
-                        <h4>2020 - Oggi</h4>
+                        <h4>Settembre 2020 - Luglio 2024</h4>
                         <p style="margin-bottom: 0px;">Laurea triennale in Informatica (L-31)</p>
                         <p>Università degli Studi di Salerno<br></p>
-                        <p style="border-color: var(--bs-gray-600);color: var(--bs-gray-700);">C, Java, MySQL, JSP</p>
+                        <p style="border-color: var(--bs-gray-600);color: var(--bs-gray-700);">C, Java, MySQL, JSP, Python</p>
                     </div>
                 </div>
             </div>
@@ -53,6 +53,21 @@
             </div>
         </div>
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body p-4">
+                        <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-stethoscope">
+                                <path d="M4.5 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5Zm4 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5Zm-3.5 0h-1v2.09c0 1.415 1.12 2.566 2.5 2.87V11.5A2.5 2.5 0 0 0 9 14v1.5a1.5 1.5 0 0 0 3 0V14a.5.5 0 0 0-1 0v1.5a.5.5 0 0 1-1 0V14a1.5 1.5 0 0 0-1.5-1.5V7.46c1.38-.305 2.5-1.456 2.5-2.87V2.5h-1v2.09a2.49 2.49 0 0 1-2 2.45V5.5a.5.5 0 0 0-1 0v1.54a2.49 2.49 0 0 1-2-2.45V2.5Z"/>
+                            </svg>
+                        </div>
+                        <h4 class="card-title">Medical-AI</h4>
+                        <p class="card-text">Progetto di Tesi relativa all'utilizzo di modelli linguistici per l'interrogazione di dati sanitari</p>
+                        <button class="btn btn-primary" type="button" onclick="window.open('https://github.com/grauso-t/Medical-AI');">More info</button>
+                    </div>
+                </div>
+            </div>            
+
             <div class="col">
                 <div class="card">
                     <div class="card-body p-4">
