--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="it">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>grauso-t</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -46,18 +45,26 @@
                                     <ul class="timeline">
                                         <li class="event" data-date="Sett 2024 - In corso">
                                             <h3>Laurea Magistrale in Informatica (LM-18)</h3>
-                                            <p>Corso di laurea magistrale in Data Science &amp; Machine Learning presso
-                                                l'Università degli Studi di Salerno.</p>
+                                            <p>
+                                                Corso di laurea magistrale in Data Science &amp;
+                                                Machine Learning presso l'Università degli Studi di
+                                                Salerno.
+                                            </p>
                                         </li>
                                         <li class="event" data-date="Sett 2020 - Lug 2024">
                                             <h3>Laurea Triennale in Informatica (L-31)</h3>
-                                            <p>Corso di laurea triennale in Scienze &amp; Tecnologie Informatiche presso
-                                                l'Università degli Studi di Salerno.</p>
+                                            <p>
+                                                Corso di laurea triennale in Scienze &amp; Tecnologie
+                                                Informatiche presso l'Università degli Studi di
+                                                Salerno.
+                                            </p>
                                         </li>
                                         <li class="event" data-date="Sett 2015 - Lug 2020">
                                             <h3>Diploma Liceo Scientifico</h3>
-                                            <p>Corso di laurea triennale in Scienze &amp; Tecnologie Informatiche presso
-                                                il Liceo Scientifico "Aeclanum".</p>
+                                            <p>
+                                                Corso di laurea triennale in Scienze &amp; Tecnologie
+                                                Informatiche presso il Liceo Scientifico "Aeclanum".
+                                            </p>
                                         </li>
                                     </ul>
                                 </div>
@@ -77,7 +84,6 @@
                                 <h2 class="card-title text-center mb-4">Progetti</h2>
                                 <div id="content">
                                     <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
-
                                         <div class="col">
                                             <div class="card h-100 d-flex flex-column">
                                                 <div class="card-body d-flex flex-column">
@@ -95,12 +101,44 @@
                                                         </svg>
                                                     </div>
                                                     <h4 class="card-title">Medical-AI</h4>
-                                                    <p class="card-text">Progetto di Tesi relativa all'utilizzo di
-                                                        modelli linguistici per l'interrogazione di dati sanitari</p>
+                                                    <p class="card-text">
+                                                        Progetto di Tesi relativa all'utilizzo di modelli
+                                                        linguistici per l'interrogazione di dati sanitari
+                                                    </p>
                                                     <div class="mt-auto">
                                                         <button class="btn btn-primary" type="button"
-                                                            onclick="window.open('https://github.com/grauso-t/Medical-AI');">More
-                                                            info</button>
+                                                            onclick="window.open('https://github.com/grauso-t/Medical-AI');">
+                                                            More info
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col">
+                                            <div class="card h-100 d-flex flex-column">
+                                                <div class="card-body d-flex flex-column">
+                                                    <div
+                                                        class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon text-primary">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
+                                                            fill="currentColor" viewBox="0 0 16 16"
+                                                            class="bi bi-stoplights" viewBox="0 0 16 16">
+                                                            <path
+                                                                d="M8 5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m0 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3m1.5 2.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0" />
+                                                            <path
+                                                                d="M4 2a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2h2c-.167.5-.8 1.6-2 2v2h2c-.167.5-.8 1.6-2 2v2h2c-.167.5-.8 1.6-2 2v1a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-1c-1.2-.4-1.833-1.5-2-2h2V8c-1.2-.4-1.833-1.5-2-2h2V4c-1.2-.4-1.833-1.5-2-2zm2-1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z" />
+                                                        </svg>
+                                                    </div>
+                                                    <h4 class="card-title">Formula 1 Predictor</h4>
+                                                    <p class="card-text">
+                                                        Progetto sviluppato per il corso di Fondamenti di
+                                                        Intelligenza Artificiale
+                                                    </p>
+                                                    <div class="mt-auto">
+                                                        <button class="btn btn-primary" type="button"
+                                                            onclick="window.open('https://github.com/grauso-t/Formula-1-Predictor');">
+                                                            More info
+                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -120,12 +158,15 @@
                                                         </svg>
                                                     </div>
                                                     <h4 class="card-title">HardwareZone</h4>
-                                                    <p class="card-text">Progetto sviluppato per il corso di Tecnologie
-                                                        Software per il Web</p>
+                                                    <p class="card-text">
+                                                        Progetto sviluppato per il corso di Tecnologie
+                                                        Software per il Web
+                                                    </p>
                                                     <div class="mt-auto">
                                                         <button class="btn btn-primary" type="button"
-                                                            onclick="window.open('https://github.com/grauso-t/ecommerce.git');">More
-                                                            info</button>
+                                                            onclick="window.open('https://github.com/grauso-t/ecommerce.git');">
+                                                            More info
+                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -148,12 +189,15 @@
                                                         </svg>
                                                     </div>
                                                     <h4 class="card-title">Bookster</h4>
-                                                    <p class="card-text">Progetto sviluppato per il corso di Ingegneria
-                                                        del Software</p>
+                                                    <p class="card-text">
+                                                        Progetto sviluppato per il corso di Ingegneria del
+                                                        Software
+                                                    </p>
                                                     <div class="mt-auto">
                                                         <button class="btn btn-primary" type="button"
-                                                            onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');">More
-                                                            info</button>
+                                                            onclick="window.open('https://github.com/grauso-t/Bookster_Classe03.git');">
+                                                            More info
+                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -175,9 +219,8 @@
                             <div class="card-body">
                                 <h2 class="card-title mb-4">Contatti</h2>
                                 <div class="d-flex flex-column align-items-center">
-
                                     <div class="d-flex align-items-center mb-4"
-                                        onclick="window.open('https://github.com/grauso-t');" style="cursor: pointer;">
+                                        onclick="window.open('https://github.com/grauso-t');" style="cursor: pointer">
                                         <div
                                             class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center text-primary">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
@@ -194,7 +237,7 @@
 
                                     <div class="d-flex align-items-center"
                                         onclick="window.open('https://www.linkedin.com/in/teodoro-grauso')"
-                                        style="cursor: pointer;">
+                                        style="cursor: pointer">
                                         <div
                                             class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center text-primary">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
@@ -215,8 +258,6 @@
                 </div>
             </div>
         </section>
-
-
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
