--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#cover">Home</a>
                         <a class="nav-link" href="#AboutMe">About me</a>
                         <a class="nav-link" href="#Progetti">Progetti</a>
                         <a class="nav-link" href="#Contatti">Contatti</a>
@@ -34,6 +34,14 @@
     </header>
 
     <main>
+        <section id="cover" class="d-flex align-items-center justify-content-center text-center text-dark">
+            <div class="container">
+                <h1 class="display-4">Ciao!</h1>
+                <p class="lead">Mi chiamo Teodoro, e sono uno studente di Data Science & Machine Learning (LM-18)</p>
+                <a href="#AboutMe" class="btn btn-outline-dark btn-lg mt-4">Scopri di Più</a>
+            </div>
+        </section>
+
         <section id="AboutMe">
             <div class="container">
                 <div class="row">
